[package]
name = "pole"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "pole"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []
test-bpf = []

[dependencies]
anchor-lang = "0.18.2"
anchor-spl = "0.18.2"
uint = "0.9.1"
arrayref = "0.3.6"
port-variable-rate-lending-instructions = "0.2.9"
port-staking-instructions = "0.1.7"
serum-swap = { git = "https://github.com/denghz/swap.git", features = ["cpi"] }
port-anchor-adaptor = "0.2.1"
solana-maths = "0.1.1"

[dev-dependencies]
assert_matches = "1.5.0"
base64 = "0.13.0"
log = "0.4.14"
solana-program-test = "1.8.3"
solana-sdk = "1.8.3"
serde = "1.0"
serde_yaml = "0.8"